--- a/FTCollectorApp.iOS/FTCollectorApp.iOS.csproj
+++ b/FTCollectorApp.iOS/FTCollectorApp.iOS.csproj
@@ -136,4 +136,7 @@
       <Name>FTCollectorApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\logo.png" />
+  </ItemGroup>
 </Project>
