--- a/FTCollectorApp.Android/Properties/AndroidManifest.xml
+++ b/FTCollectorApp.Android/Properties/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
     <application android:label="FTCollectorApp.Android" android:theme="@style/MainTheme">
 		
-		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyABS5HQDZVCLCRyUSTuLBTewtYQ6ZUFZ1E"/>
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyABS5HQDZVCLCRyUSTuLBTewtYQ6ZUFZ1E"/>
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
 		<uses-library android:name="org.apache.http.legacy" android:required="false" />
 	</application>
@@ -15,7 +15,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-feature android:name="android.hardware.location" android:required="false" />
 	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
-	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
+	<uses-feature android:name="android.hardware.location.network" android:required="false" />
 	
 	
 </manifest>
