improve pop up page

--- a/FTCollectorApp.iOS/FTCollectorApp.iOS.csproj
+++ b/FTCollectorApp.iOS/FTCollectorApp.iOS.csproj
@@ -146,4 +146,10 @@
   <ItemGroup>
     <BundleResource Include="Resources\logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\sign_bg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\cam_white.png" />
+  </ItemGroup>
 </Project>
