--- a/FTCollectorApp.Android/Properties/AndroidManifest.xml
+++ b/FTCollectorApp.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.ftcollectorapp" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="20" android:targetSdkVersion="29" />
-	<application android:label="FTCollectorApp.Android" android:theme="@style/MainTheme">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.fibertrak.ftcollectorapp" android:installLocation="auto" xmlns:tools="http://schemas.android.com/tools">
+	<uses-sdk android:minSdkVersion="26" android:targetSdkVersion="29" />
+	<application android:label="Fibertrak" android:theme="@style/MainTheme" tools:replace="android:appComponentFactory" android:appComponentFactory="android.support.v4.app.CoreComponentFactory">
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyABS5HQDZVCLCRyUSTuLBTewtYQ6ZUFZ1E" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<uses-library android:name="org.apache.http.legacy" android:required="false" />
