--- a/FTCollectorApp/FTCollectorApp.csproj
+++ b/FTCollectorApp/FTCollectorApp.csproj
@@ -16,9 +16,11 @@
     <PackageReference Include="AWSSDK.Core" Version="3.7.6" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.7.14" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="PCLStorage" Version="1.0.2" />
     <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.14" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer" Version="1.5.0" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0" />
     <PackageReference Include="Xamarin.Controls.SignaturePad.Forms" Version="3.0.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
