--- a/FTCollectorApp/FTCollectorApp.csproj
+++ b/FTCollectorApp/FTCollectorApp.csproj
@@ -72,6 +72,9 @@
     <EmbeddedResource Update="View\OdometerPopup.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\SelectCrewRole.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\SitesPage\ActiveDevicePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -96,10 +99,16 @@
     <EmbeddedResource Update="View\SitesPage\CabinetSitePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="View\SitesPage\ColorCodePopUp.xaml">
+    <EmbeddedResource Update="View\SitesPage\DuctColorCodePopUp.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\SitesPage\DuctPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\SitesPage\Fiber\FiberMainMenu.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\SitesPage\Fiber\SheathMark.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\SitesPage\OffsetGPSPopUp.xaml">
@@ -147,12 +156,24 @@
     <EmbeddedResource Update="View\TraceFiberPages\TracingMenuPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\UserActiviyPages\UserActivityPopup.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\Utils\CameraViewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="View\SitesPage\DuctColorCodePopUp.xaml.cs">
+      <DependentUpon>DuctColorCodePopUp.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="View\SitesPage\Fiber\MMColorCodePopUp.xaml.cs">
+      <DependentUpon>MMColorCodePopUp.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="View\SitesPage\Fiber\FiberOpticCable.xaml.cs">
+      <DependentUpon>FiberOpticCable.xaml</DependentUpon>
+    </Compile>
     <Compile Update="View\SitesPage\SiteInputPage.xaml.cs">
       <DependentUpon>SiteInputPage.xaml</DependentUpon>
     </Compile>
