--- a/FTCollectorApp/FTCollectorApp.csproj
+++ b/FTCollectorApp/FTCollectorApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -13,12 +13,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ViewModel\FOCViewModel.cs" />
+    <Compile Remove="ViewModel\MapViewModel.cs" />
     <Compile Remove="View\ChooseColorPopUp.xaml.cs" />
+    <Compile Remove="View\SitesPage\Fiber\FiberOpticCable.xaml.cs" />
+    <Compile Remove="View\SitesPage\Fiber\MMColorCodePopUp.xaml.cs" />
     <Compile Remove="View\StartTimePopUpViewNew.xaml.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Remove="View\ChooseColorPopUp.xaml" />
+    <EmbeddedResource Remove="View\SitesPage\Fiber\FiberOpticCable.xaml" />
+    <EmbeddedResource Remove="View\SitesPage\Fiber\MMColorCodePopUp.xaml" />
     <EmbeddedResource Remove="View\StartTimePopUpViewNew.xaml" />
   </ItemGroup>
 
@@ -171,12 +177,6 @@
   <ItemGroup>
     <Compile Update="View\SitesPage\DuctColorCodePopUp.xaml.cs">
       <DependentUpon>DuctColorCodePopUp.xaml</DependentUpon>
-    </Compile>
-    <Compile Update="View\SitesPage\Fiber\MMColorCodePopUp.xaml.cs">
-      <DependentUpon>MMColorCodePopUp.xaml</DependentUpon>
-    </Compile>
-    <Compile Update="View\SitesPage\Fiber\FiberOpticCable.xaml.cs">
-      <DependentUpon>FiberOpticCable.xaml</DependentUpon>
     </Compile>
     <Compile Update="View\SitesPage\SiteInputPage.xaml.cs">
       <DependentUpon>SiteInputPage.xaml</DependentUpon>
