--- a/FTCollectorApp/FTCollectorApp.csproj
+++ b/FTCollectorApp/FTCollectorApp.csproj
@@ -157,6 +157,9 @@
     <EmbeddedResource Update="View\SitesPage\PullBoxSitePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\SitesPage\PullBoxSitePageView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\SitesPage\RacksPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -213,6 +216,9 @@
   <ItemGroup>
     <Compile Update="View\SitesPage\DuctColorCodePopUp.xaml.cs">
       <DependentUpon>DuctColorCodePopUp.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="View\SitesPage\StructureSitePageView.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
